# telemetry

./: .astylerc  .clangformat  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DBUS_MIGRATION_STEP1_2_PLAN.md  DBUS_MIGRATION_STEP3_BULKDATA_PLAN.md  Makefile.am  Makefile.in  NOTICE  README.md  T2_Transport_Decoupling_Design_Document.md  aclocal.m4  build_inside_container.sh  bulkdata_gtestenableflag.diff  configure  configure.ac  cov_build.sh  debug_yogeswarancommit.patch  rdk_env.xml  report.md  report10.md  report6.md  scanoss.json  telemetry2_0.path  telemetry2_0.service  test.txt  test_deadlock_scenarios.sh  test_feb11.patch  test_file  thread_synchronization.md
containers/native-platform/mock-rfc-providers/: Makefile.am  configure.ac  rfc_provider.c
source/: Makefile.am  Makefile.in  telemetry2_0  telemetry2_0.c
source/bulkdata/: HLD.md  Makefile.am  Makefile.in  datamodel.c  datamodel.h  profile.c  profile.h  profilexconf.c  profilexconf.h  reportprofiles.c  reportprofiles.h  t2eventreceiver.c  t2eventreceiver.h  t2markers.c  t2markers.h
source/ccspinterface/: .rbusInterface.c.swp  Makefile.am  Makefile.in  busInterface.c  busInterface.h  ccspinterface.c  ccspinterface.h  dbusInterface.c  dbusInterface.h  rbusInterface.c  rbusInterface.h
source/commonlib/: Makefile.am  Makefile.in  t2Shared_api.sh  t2_transport_interface.c  t2_transport_interface.h  telemetry2_0_client  telemetry_busmessage_internal.h  telemetry_busmessage_sender.c  telemetry_client.c
source/dcautil/: Makefile.am  Makefile.in  busInterfaceTests.c  busInterfaceTests.h  dca.c  dca.h  dcacpu.c  dcajson.c  dcalist.c  dcalist.h  dcamem.c  dcaproc.c  dcautil.c  dcautil.h  flowchart.md  flowchart_optimized.md  legacyutils.c  legacyutils.h  rdk_linkedlist.c  rdk_linkedlist.h  testApp.c  testModules.c
source/docs/bulkdata/: README.md
source/docs/protocol/: curl_usage_architecture.md
source/docs/scheduler/: README.md
source/nativeProtocolSimulator/: Makefile.am  t2rbusMethodProvider.c
source/privacycontrol/: Makefile.am  Makefile.in  rdkservices_privacyutils.c  rdkservices_privacyutils.h
source/protocol/: Makefile.am  Makefile.in
source/protocol/http/: Makefile.am  Makefile.in  curlinterface.c  curlinterface.h  multicurlinterface.c  multicurlinterface.h
source/protocol/quic/: Makefile.am  quicinterface.c  quicinterface.h
source/protocol/rbusMethod/: Makefile.am  Makefile.in  rbusmethodinterface.c  rbusmethodinterface.h
source/reportgen/: Makefile.am  Makefile.in  reportgen.c  reportgen.h
source/scheduler/: Makefile.am  Makefile.in  scheduler.c  scheduler.h
source/t2dm/: Makefile.am  Makefile.in  cosa_apis.h  cosa_telemetry_dml.c  cosa_telemetry_dml.h  cosa_telemetry_internal.c  cosa_telemetry_internal.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
source/t2parser/: Makefile.am  Makefile.in  t2parser.c  t2parser.h  t2parserxconf.c  t2parserxconf.h
source/t2ssp/: ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  t2_custom.h
source/test/: DYNAMICTABLE_TESTS_README.md  Makefile.am  Makefile.in  TelemetryTest.cpp  coverage-improvement-plan.md  gtest_main.cpp
source/test/bulkdata/: Makefile.am  Makefile.in  ProfileMock.cpp  ProfileMock.h  SchedulerMock.cpp  SchedulerMock.h  datamodelMock.cpp  datamodelMock.h  datamodelTest.cpp  gtest_main.cpp  profileMock.cpp  profileMock.h  profileTest.cpp  profile_dynamictable_Test.cpp  profilexconfMock.cpp  profilexconfMock.h  profilexconfTest.cpp  reportprofileMock.cpp  reportprofileMock.h  reportprofilesMock.cpp  reportprofilesMock.h  reportprofilesTest.cpp  t2eventreceiverMock.cpp  t2eventreceiverMock.h  t2markersMock.cpp  t2markersMock.h  t2markersTest.cpp
source/test/ccspinterface/: CcspInterfaceMock.cpp  CcspInterfaceMock.h  Makefile.am  Makefile.in  ccspinterfaceTest.cpp  gtest_main.cpp
source/test/ccspinterface/ccsp/: ccsp_base_api.h
source/test/commonlib/: TelemetryBusMsgSender.cpp  TelemetryClientTest.cpp
source/test/dbustest/: a.out  dbus_test_client.c  dbus_test_client_Version2.c  dbus_test_server.c  dbus_test_server_Version2.c
source/test/dcautils/: Makefile.am  Makefile.in  dcautilTest.cpp  gtest_main.cpp
source/test/leak_detection/: DEVICE_INTEGRATION.md  Makefile  README  README.md  curl_leak_test.c  monitor_memory.sh  run_leak_test.sh
source/test/mocks/: FileioMock.cpp  FileioMock.h  MsgPackMock.cpp  MsgpackMock.cpp  MsgpackMock.h  SystemMock.cpp  SystemMock.h  VectorMock.cpp  VectorMock.h  profileStub.c  protocolMock.cpp  protocolMock.h  rbusMock.cpp  rbusMock.h  rdkconfigMock.cpp  rdkconfigMock.h  rdklogMock.cpp  rdklogMock.h
source/test/protocol/: CurlInterfaceAdditionalTest.cpp  Makefile.am  MultiCurlInterfaceMock.cpp  MultiCurlInterfaceMock.h  MultiCurlInterfaceTest.cpp  ProtocolTest.cpp  gtest_main.cpp
source/test/rbus/include/: rbus.h  rbus_filter.h  rbus_message.h  rbus_object.h  rbus_property.h  rbus_value.h
source/test/rbus/src/core/: rbuscore.h  (+3 more)
source/test/reportgen/: Makefile.am  Makefile.in  gtest_main.cpp  reportgenMock.cpp  reportgenMock.h  reportgenTest.cpp  reportgen_dynamictable_Test.cpp
source/test/scheduler/: Makefile.am  Makefile.in  gtest_main.cpp  schedulerMock.cpp  schedulerMock.h  schedulerTest.cpp
source/test/t2parser/: Makefile.am  Makefile.in  gtest_main.cpp  rpInputfile.txt  t2parserMock.cpp  t2parserMock.h  t2parserTest.cpp  t2parser_dynamictable_Test.cpp  t2parserxconfTest.cpp  xconfInputfile.txt
source/test/utils/: UtilsTest.cpp
source/test/xconf-client/: Makefile.am  gtest_main.cpp  xconfclientMock.cpp  xconfclientMock.h  xconfclientTest.cpp
source/testApp/: Makefile.am  busInterfaceTests.c  busInterfaceTests.h  testApp.c  testCommonLibApi.c  testModules.c
source/utils/: Makefile.am  Makefile.in  persistence.c  persistence.h  t2MtlsUtils.c  t2MtlsUtils.h  t2collection.c  t2collection.h  t2common.c  t2common.h  t2log_wrapper.c  t2log_wrapper.h  vector.c  vector.h
source/xconf-client/: Makefile.am  Makefile.in  multicurlinterface.c  multicurlinterface.h  xconfclient.c  xconfclient.h
(+225 files in other folders)
